syntax = "proto3";

package pb;

option go_package = "winterflow-agent/internal/grpc/pb";

// Agent registration messages
message RegisterAgentRequestV1 {
  string version = 1;
  map<string, bool> features = 2;
  string server_id = 3;
  string server_token = 4;
}

message RegisterAgentResponseV1 {
  bool success = 1;
  string message = 2;
  string access_token = 3;
}

message UnregisterAgentRequestV1 {
  string server_id = 1;
  string access_token = 2;
}

message UnregisterAgentResponseV1 {
  bool success = 1;
  string message = 2;
}

// Agent heartbeat and status messages
message AgentHeartbeatV1 {
  string server_id = 1;
  string access_token = 2;
  map<string, string> metrics = 3;
}

message AgentHeartbeatResponseV1 {
  bool success = 1;
  string message = 2;
}

// Agent service definition
service AgentService {
  // Register an agent
  rpc RegisterAgentV1(RegisterAgentRequestV1) returns (RegisterAgentResponseV1) {}

  // Unregister an agent
  rpc UnregisterAgentV1(UnregisterAgentRequestV1) returns (UnregisterAgentResponseV1) {}

  // Bidirectional streaming for agent communication
  rpc AgentStreamV1(stream AgentHeartbeatV1) returns (stream AgentHeartbeatResponseV1) {}
} 