syntax = "proto3";

package pb;

option go_package = "winterflow-agent/internal/winterflow/grpc/pb";


// Response codes for all responses
enum ResponseCode {
  RESPONSE_CODE_UNSPECIFIED = 0;
  RESPONSE_CODE_SUCCESS = 1;
  RESPONSE_CODE_INVALID_REQUEST = 2;
  RESPONSE_CODE_UNAUTHORIZED = 3;
  RESPONSE_CODE_SERVER_ERROR = 4;
  RESPONSE_CODE_AGENT_NOT_FOUND = 5;
  RESPONSE_CODE_SERVER_NOT_FOUND = 6;
  RESPONSE_CODE_AGENT_ALREADY_CONNECTED = 7;
}

// Agent registration messages
message RegisterAgentRequestV1 {
  string version = 1;
  string server_id = 2;
  string server_token = 3;
  map<string, string> capabilities = 4;
  map<string, bool> features = 5;
  map<string, string> metrics = 6;
}

message RegisterAgentResponseV1 {
  bool success = 1;
  string message = 2;
  string access_token = 3;
  ResponseCode response_code = 4;
}

// Agent heartbeat and status messages
message AgentHeartbeatV1 {
  string server_id = 1;
  string access_token = 2;
  map<string, string> metrics = 3;
}

message AgentHeartbeatResponseV1 {
  bool success = 1;
  string message = 2;
  ResponseCode response_code = 3;
}

// Agent service definition
service AgentService {
  // Register an agent
  rpc RegisterAgentV1(RegisterAgentRequestV1) returns (RegisterAgentResponseV1) {}

  // Bidirectional streaming for agent communication
  rpc AgentStreamV1(stream AgentHeartbeatV1) returns (stream AgentHeartbeatResponseV1) {}
}